tests/spec/emit/snapshots/while_let_option_function_call.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn next_item(counter: int) -> Option<int> {
    if counter < 5 { Some(counter) } else { None }
  }
  
  fn test() {
    let mut i = 0;
    while let Some(x) = next_item(i) {
      fmt.Print(f"Got: {x}\n");
      i = i + 1;
    }
  }
---
package main

import "fmt"

func nextItem(counter int) (int, bool) {
	if counter < 5 {
		return counter, true
	}
	return 0, false
}

func test() {
	i := 0
	for {
		x, ok := nextItem(i)
		if !ok {
			break
		}
		fmt.Printf("Got: %d\n", x)
		i++
	}
}
