tests/spec/emit/snapshots/while_let_result_function_call.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  
  fn next_result(counter: int) -> Result<int, string> {
    if counter < 5 { Ok(counter) } else { Err("done") }
  }
  
  fn test() {
    let mut i = 0;
    while let Ok(x) = next_result(i) {
      fmt.Print(f"Got: {x}\n");
      i = i + 1;
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func nextResult(counter int) lisette.Result[int, string] {
	if counter < 5 {
		return lisette.MakeResultOk[int, string](counter)
	}
	return lisette.MakeResultErr[int, string]("done")
}

func test() {
	i := 0
	for {
		subject := nextResult(i)
		if subject.Tag == lisette.ResultOk {
			fmt.Printf("Got: %d\n", subject.OkVal)
			i++
		} else {
			break
		}
	}
}
