tests/spec/emit/snapshots/while_let_tuple_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<(int, int)>) {
    let mut current = opt;
    while let Some((a, b)) = current {
      current = None;
      let _ = a + b;
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[lisette.Tuple2[int, int]]) {
	current := opt
	for {
		if current.Tag == lisette.OptionSome {
			a := current.SomeVal.First
			b := current.SomeVal.Second
			current = lisette.MakeOptionNone[lisette.Tuple2[int, int]]()
			_ = a + b
		} else {
			break
		}
	}
}
