tests/spec/emit/snapshots/while_loop_as_last_expression_in_block.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() {
    let _ = {
      let mut i = 0
      while i < 3 {
        i = i + 1
      }
    }
  }
---
package main

func test() {
	i := 0
	for i < 3 {
		i++
	}
}
