tests/spec/emit/snapshots/wrap_err_computed_message_uses_a_string_verb.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn describe(raw: string) -> string { "parsing " + raw }
  
  fn parse(raw: string) -> Result<int, error> {
    let n = strconv.Atoi(raw).wrap_err(describe(raw))?
    Ok(n)
  }
  
  fn main() {
    fmt.Println(parse("1"))
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func describe(raw string) string {
	return "parsing " + raw
}

func parse(raw string) (int, error) {
	n, err := strconv.Atoi(raw)
	msg := describe(raw)
	if err != nil {
		return 0, fmt.Errorf("%s: %w", msg, err)
	}
	return n, nil
}

func main() {
	fmt.Println(lisette.ResultFromPair[int](parse("1")))
}
